# 4Gewinnt

./: CMakeLists.txt  main.cpp
src/: Board.cpp  Board.h  Game.cpp  Game.h  State.h  debug.hpp  definitions.hpp  utilities.cpp  utilities.h
